Set WebFont priority to very low if the network is detected to be slow

When the network is detected to be slow, Blink immediately changes to
using fallback font. This CL changes the Blink resource priority of the
WebFont resource to VeryLow since the font is no longer required for
text paint.

BUG=665504

Review-Url: https://codereview.chromium.org/2494243003
Cr-Commit-Position: refs/heads/master@{#432254}

Former-commit-id: 5ea0c57befbcadba648b21447e83d5d4a280c885